[gd_scene load_steps=5 format=3 uid="uid://dcoor4w5dj7my"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_u42xv"]
[ext_resource type="Texture2D" uid="uid://c1hr5mkn1udag" path="res://icon.svg" id="2_1wag7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_81jyf"]
size = Vector2(127, 131)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kqimt"]
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 1.0
emission_ring_inner_radius = 0.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = 720.0
orbit_velocity_min = 2.0
orbit_velocity_max = 2.0
gravity = Vector3(0, 0, 0)
radial_accel_min = -2.23517e-06
radial_accel_max = 100.0
tangential_accel_min = -2.23517e-06
tangential_accel_max = 100.0
scale_max = 17.13
color = Color(0.737255, 1, 1, 1)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_u42xv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -0.5)
shape = SubResource("RectangleShape2D_81jyf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1wag7")

[node name="FlipSound" type="AudioStreamPlayer2D" parent="."]

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]

[node name="DeathParticles" type="GPUParticles2D" parent="."]
amount = 64
process_material = SubResource("ParticleProcessMaterial_kqimt")
